# AKG-Omics

./: LICENSE  README.md  pyproject.toml  requirements.txt
akg_omics/: __init__.py  benchmark_llm_knowledge_agents.py  core.py  inspect_spatch_proteogenomics.py  model.py  preprocess.py  rule_orchestration.py  run.py  run_metabolomics_final.py  train_rule_agent_core.sh  utils.py  visualize_proteogenomics_predictions.py
akg_omics/knowledge_agent/: README.md  __init__.py  agent.py  data_profiler.py  llm_client.py  orchestrator.py  probe_agent.py  registry.json  registry.py  selector.py  task_schema.py  tool_executor.py  validator.py
analysis_scripts/: analyze_task3_dynamic_kb.py  audit_external_knowledge.py  plot_case_gene_knowledge_chain.py  run_dynamic_kb_ablation_task3.sh  screen_4806_kb_case_genes.py  trace_case_gene_kb_relations.py
run_scripts/: run_gene_panel_sweep.sh  train_metabolomics_task5_8.sh  train_proteogenomics_dynamic_gate.sh  train_proteogenomics_rule_agent.sh  train_proteogenomics_target_cycle_kb_align.sh  visualize_all_tasks.sh  visualize_predictions_only.sh
visualization_scripts/: analyze_crossmodal_relations_celltypes.py  generate_direct_task_visualizations.py  prepare_targeted_gene_panel.py
