[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akg-omics"
version = "0.1.0"
description = "Knowledge-guided spatial omics generation with adaptive external biological knowledge."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "AKG-Omics contributors"}]
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["akg_omics*"]